[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/created_fonts/HeaderFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/theme/HeaderTheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/simulation/ViewGame.gd" type="Script" id=3]

[node name="ViewGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="GameScore" type="Control" parent="."]
margin_top = 96.0
margin_right = 720.0
margin_bottom = 216.0

[node name="HomeTeamLabel" type="Label" parent="GameScore"]
margin_left = 16.0
margin_right = 385.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
text = "HomeTeamLabel"

[node name="HomeTeamScore" type="Label" parent="GameScore"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -152.0
margin_right = -21.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 2

[node name="AwayTeamLabel" type="Label" parent="GameScore"]
margin_left = 16.0
margin_top = 64.0
margin_right = 385.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
text = "AwayTeamLabel"

[node name="AwayTeamScore" type="Label" parent="GameScore"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_top = 64.0
margin_right = -21.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 2

[node name="GameClock" type="Control" parent="."]
margin_right = 752.0
margin_bottom = 80.0

[node name="QuarterLabel" type="Label" parent="GameClock"]
margin_left = 16.0
margin_top = 16.0
margin_right = 312.0
margin_bottom = 73.0
theme = ExtResource( 2 )
text = "Q0"

[node name="TimeLabel" type="Label" parent="GameClock"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -312.0
margin_top = 16.0
margin_right = -50.0
margin_bottom = 73.0
theme = ExtResource( 2 )
text = "15:00"
align = 2

[node name="NextPlayDebugButton" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -296.0
theme = ExtResource( 2 )
text = "RUN NEXT PLAY"

[connection signal="pressed" from="NextPlayDebugButton" to="." method="_on_NextPlayDebugButton_pressed"]
